adding user verification and logging system
- adding user verification and logging system
- adding blog categories
- adding restriction for unlogged users

--- a/theblog/templates/add_category.html
+++ b/theblog/templates/add_category.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Post{% endblock %}
+{% block title %}Add Category{% endblock %}
 
 
 {% block content %}
 {% if user.is_authenticated %}
-<h2>Add New Post</h2>
+<h2>Add New Category</h2>
 <form method="post">
     {% csrf_token %}
 
@@ -13,7 +13,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button>Post</button>
+        <button>Add Category</button>
     </form>
 </div>
 
