--- a/theblog/templates/article_details.html
+++ b/theblog/templates/article_details.html
@@ -1,27 +1,15 @@
-{%  extends 'base.html' %}
+{% extends 'base.html' %}
+
+{% block title %}{{ post.title }}{% endblock %}
+
 {% block content %}
-{% block title %}
-    {{ post.title_tag }}
-    {% endblock %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ post.title }}</title>
-
-</head>
-<body>
-
-<h1>{{ post.title }}</h1>
-<small>By: {{ post.author.first_name }} {{ post.author.last_name }}</small>
-<hr>
+<h2>{{ post.title }}</h2>
+    <p><strong>Category:</strong> {{ post.category }}</p>
+<p><strong>Author:</strong> {{ post.author }}</p>
+<p><strong>Date:</strong> {{ post.post_date }}</p>
 <p>{{ post.body }}</p>
-
-<br/><br/>
-<a href="{% url 'home'%}">Back</a>
-
-</body>
-</html>
-
+{% if user.is_authenticated %}
+    <a href="{% url 'update_post' post.id %}" class="btn btn-primary">Edit</a>
+    <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
+{% endif %}
 {% endblock %}
