--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -1,43 +1,37 @@
-
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<title>{% block title %}
-    Bike blog
-{% endblock %}</title>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home'%}">Bike blog</a>
-
-
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'add_post' %}">Add post</a>
-        </li>
-
-
-      </ul>
-
+<head>
+    {% load static %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <title>{% block title %}Bike Blog{% endblock %}</title>
+</head>
+<body>
+    <header>
+        <h1>Bike Blog</h1>
+    </header>
+    <nav>
+        <a href="{% url 'home' %}">Home</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'add_post' %}">Add Post</a>
+            <a href="{% url 'add_category' %}">Add Category</a>
+            <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <input type="submit" value="Logout">
+            </form>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'register' %}">Register</a>
+        {% endif %}
+    </nav>
+    <div class="container">
+        {% block content %}
+        <!-- Content will go here -->
+        {% endblock %}
     </div>
-
-</nav>
-  <div class="container">
-    {% block content %}
-
-  {% endblock %}
-
-  </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+    <footer>
+        <p>© 2024 Bike Blog</p>
+    </footer>
+</body>
 </html>
-
-
-
