--- a/theblog/templates/categories.html
+++ b/theblog/templates/categories.html
@@ -1,21 +1,28 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Categories{% endblock %}
 
 {% block content %}
-<h2>Latest Posts</h2>
-{% for post in object_list %}
+<h2>{{ categories }}</h2>
+{% if category_posts %}
+
+
+    {% for post in category_posts %}
     <div class="post">
         <h3><a href="{% url 'article-detail' post.id %}">{{ post.title }} </a></h3>
-        <p>{{ post.category }}</p>
+
         <p>Posted by {{ post.author }} on {{ post.post_date }}</p>
         {% if user.is_authenticated %}
             <a href="{% url 'update_post' post.id %}" class="btn btn-primary">Edit</a>
             <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
         {% endif %}
     </div>
-{% empty %}
-    <p>No posts available.</p>
+    {% empty %}
+        <p>No posts available.</p>
 {% endfor %}
+
+{% else %}
+No posts in this category
+{% endif %}
 {% endblock %}
 
