--- a/theblog/templates/update_post.html
+++ b/theblog/templates/update_post.html
@@ -1,24 +1,19 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Post{% endblock %}
-
+{% block title %}Update Post{% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
-<h2>Add New Post</h2>
-<form method="post">
-    {% csrf_token %}
-
+    {% if user.is_authenticated %}
+<h2>Update Post</h2>
 <div class="form-group">
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button>Post</button>
     </form>
-</div>
-
-</form>
-
+    </div>
     {% endif %}
 {% endblock %}
+
+
 
