--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <h1>Login</h1>
-
+<script src="{% static 'forgot_password.js' %}"></script>
 <div class="form-group">
     <form method="POST">
         {% csrf_token %}
@@ -15,5 +15,9 @@
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
 </div>
+
+    <p><a href="{% url 'forgot_password' %}">Forgot my password</a></p>
+
+
 
 {% endblock %}
