--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -1,14 +1,18 @@
+
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     Register
 {% endblock %}
 
 {% block content %}
+
 <h1>Register</h1>
 
+<script src="{% static 'form-validation.js' %}"></script>
 <div class="form-group">
-    <form method="POST">
+    <form id = 'SignUpForm' method="POST" >
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Register</button>
