--- a/theblog/templates/article_details.html
+++ b/theblog/templates/article_details.html
@@ -4,12 +4,38 @@
 
 {% block content %}
 <h2>{{ post.title }}</h2>
-    <p><strong>Category:</strong> {{ post.category }}</p>
+    <p><strong>Category:</strong> <a href="{% url 'category' post.category%}">{{ post.category }} </a></p>
 <p><strong>Author:</strong> {{ post.author }}</p>
 <p><strong>Date:</strong> {{ post.post_date }}</p>
 <p>{{ post.body }}</p>
 {% if user.is_authenticated %}
-    <a href="{% url 'update_post' post.id %}" class="btn btn-primary">Edit</a>
-    <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
+    {% if user.id == post.author.id %}
+        <a href="{% url 'update_post' post.id %}" class="btn btn-primary">Edit</a>
+        <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
+    {% endif %}
 {% endif %}
+<br/><br/>
+    <h3>Comments</h3> {% if  post.comments.all %}
+
+    {% endif %}
+<br/>
+    {% if not post.comments.all %}
+        No comments {% if user.is_authenticated %}
+        <a href="{% url 'add_comment' post.pk %}">Add one</a>
+        {% endif %}
+    {% else %}
+        {% for comment in post.comments.all %}
+            <strong>{{ comment.name }} -
+            {{ comment.date_added }}</strong>
+        <br/>
+        {{ comment.body }}
+
+            <br/><br/>
+        {% endfor %}
+    {% endif %}
+    {% if  post.comments.all %}
+        {% if user.is_authenticated %}
+            <a href="{% url 'add_comment' post.pk %}">Add another comment</a>
+            {% endif %}
+    {% endif %}
 {% endblock %}
