--- a/theblog/templates/home.html
+++ b/theblog/templates/home.html
@@ -7,11 +7,13 @@
 {% for post in object_list %}
     <div class="post">
         <h3><a href="{% url 'article-detail' post.id %}">{{ post.title }} </a></h3>
-        <p>{{ post.category }}</p>
+        <p><a href="{% url 'category' post.category%}">{{ post.category }} </a></p>
         <p>Posted by {{ post.author }} on {{ post.post_date }}</p>
         {% if user.is_authenticated %}
-            <a href="{% url 'update_post' post.id %}" class="btn btn-primary">Edit</a>
-            <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
+            {% if user.id == post.author.id %}
+                <a href="{% url 'update_post' post.id %}" class="btn btn-primary">Edit</a>
+                <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
+            {% endif %}
         {% endif %}
     </div>
 {% empty %}
