--- a/theblog/templates/update_post.html
+++ b/theblog/templates/update_post.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     {% if user.is_authenticated %}
+        {% if user.id == post.author.id %}
 <h2>Update Post</h2>
 <div class="form-group">
     <form method="POST">
@@ -12,6 +13,7 @@
         <button>Post</button>
     </form>
     </div>
+            {% endif %}
     {% endif %}
 {% endblock %}
 
