--- a/theblog/templates/home.html
+++ b/theblog/templates/home.html
@@ -19,5 +19,11 @@
 {% empty %}
     <p>No posts available.</p>
 {% endfor %}
+    <a href="{% url 'export_posts_xml' %}">Download all Posts as XML</a>
+    <br/>
+    {% if user.is_authenticated %}
+    <a href="{% url 'export_user_data_excel' %}">Download Your Posts as Excel</a>
+    {% endif %}
+
 {% endblock %}
 
