--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -10,7 +10,7 @@
 
 <h1>Register</h1>
 
-<script src="{% static 'form-validation.js' %}"></script>
+{#<script src="{% static 'form-validation.js' %}"></script>#}
 <div class="form-group">
     <form id = 'SignUpForm' method="POST" >
         {% csrf_token %}
