--- a/theblog/templates/home.html
+++ b/theblog/templates/home.html
@@ -21,9 +21,9 @@
 {% endfor %}
     <a href="{% url 'export_posts_xml' %}">Download all Posts as XML</a>
     <br/>
-    {% if user.is_authenticated %}
-    <a href="{% url 'export_user_data_excel' %}">Download Your Posts as Excel</a>
-    {% endif %}
+{#    {% if user.is_authenticated %}#}
+{#    <a href="{% url 'export_user_data_excel' %}">Download Your Posts as Excel</a>#}
+{#    {% endif %}#}
 
 {% endblock %}
 
