--- a/theblog/templates/add_category.html
+++ b/theblog/templates/add_category.html
@@ -2,23 +2,19 @@
 
 {% block title %}Add Category{% endblock %}
 
-
 {% block content %}
 {% if user.is_authenticated %}
-<h2>Add New Category</h2>
-<form method="post">
-    {% csrf_token %}
+<div class="container">
+    <h2>Add New Category</h2>
 
-<div class="form-group">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button>Add Category</button>
-    </form>
+        <div class="form-group">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-primary">Add Category</button>
+            </form>
+        </div>
+
 </div>
-
-</form>
-
-    {% endif %}
+{% endif %}
 {% endblock %}
-
