--- a/theblog/templates/add_comment.html
+++ b/theblog/templates/add_comment.html
@@ -2,23 +2,20 @@
 
 {% block title %}Comment on Blog Post{% endblock %}
 
-
 {% block content %}
 {% if user.is_authenticated %}
-<h2>Add Comment</h2>
-<form method="post">
-    {% csrf_token %}
-
-<div class="form-group">
-    <form method="POST">
+<div class="container">
+    <h2>Add Comment</h2>
+    <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button>Add</button>
+        <div class="form-group">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-primary">Add Comment</button>
+            </form>
+        </div>
     </form>
 </div>
-
-</form>
-
-    {% endif %}
+{% endif %}
 {% endblock %}
-
