--- a/theblog/templates/add_post.html
+++ b/theblog/templates/add_post.html
@@ -2,23 +2,18 @@
 
 {% block title %}Add Post{% endblock %}
 
-
 {% block content %}
 {% if user.is_authenticated %}
-<h2>Add New Post</h2>
-<form method="post">
-    {% csrf_token %}
-
-<div class="form-group">
-    <form method="POST">
+<div class="container">
+    <h2>Add New Post</h2>
         {% csrf_token %}
-        {{ form.as_p }}
-        <button>Post</button>
-    </form>
+        <div class="form-group">
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-primary">Post</button>
+            </form>
+        </div>
 </div>
-
-</form>
-
-    {% endif %}
+{% endif %}
 {% endblock %}
-
