--- a/theblog/templates/article_details.html
+++ b/theblog/templates/article_details.html
@@ -3,39 +3,58 @@
 {% block title %}{{ post.title }}{% endblock %}
 
 {% block content %}
-<h2>{{ post.title }}</h2>
-    <p><strong>Category:</strong> <a href="{% url 'category' post.category%}">{{ post.category }} </a></p>
-<p><strong>Author:</strong> {{ post.author }}</p>
-<p><strong>Date:</strong> {{ post.post_date }}</p>
-<p>{{ post.body }}</p>
-{% if user.is_authenticated %}
-    {% if user.id == post.author.id %}
-        <a href="{% url 'update_post' post.id %}" class="btn btn-primary">Edit</a>
-        <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
-    {% endif %}
-{% endif %}
-<br/><br/>
-    <h3>Comments</h3> {% if  post.comments.all %}
+    <span class="badge badge-primary"></span>
+    <section class="jumbotron jumbotron-fluid text-center">
+    <article></article>
+    <h2 class="display-4"></h2>
+    <h3 class="display-4"></h3>
+    <h4 class="display-4"></h4>
+    <h5 class="display-4"></h5>
+    <h6 class="display-4"></h6>
+    <hr>
 
+    <figure></figure>
+<div class="container">
+    <h2>{{ post.title }}</h2>
+    <p><strong>Category:</strong> <a href="{% url 'category' post.category%}">{{ post.category }} </a></p>
+    <p><strong>Author:</strong> {{ post.author }}</p>
+    <p><strong>Date:</strong> {{ post.post_date }}</p>
+    <p>{{ post.body }}</p>
+        {% if post.image %}
+        <img src="{{ post.image.url }}" alt="Image" style="max-width: 40%; height: auto;">
+
+        {% else %}
+        <p></p>
+        {% endif %}
+    <br/><br/>
+    {% if user.is_authenticated %}
+        {% if user.id == post.author.id %}
+            <a href="{% url 'update_post' post.id %}" class="btn btn-primary">Edit</a>
+            <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
+        {% endif %}
     {% endif %}
-<br/>
-    {% if not post.comments.all %}
-        No comments {% if user.is_authenticated %}
-        <a href="{% url 'add_comment' post.pk %}">Add one</a>
+    <br/><br/>
+    <h3>Comments</h3>
+    {% if post.comments.all %}
+        <ul>
+            {% for comment in post.comments.all %}
+                <li>
+                    <strong>{{ comment.name }} - {{ comment.date_added }}</strong>
+                    <br/>
+                    {{ comment.body }}
+                    <br/><br/>
+
+                </li>
+            {% endfor %}
+        </ul>
+        {% if user.is_authenticated %}
+            <a href="{% url 'add_comment' post.pk %}" class="btn btn-success">Add another comment</a>
         {% endif %}
     {% else %}
-        {% for comment in post.comments.all %}
-            <strong>{{ comment.name }} -
-            {{ comment.date_added }}</strong>
-        <br/>
-        {{ comment.body }}
-
-            <br/><br/>
-        {% endfor %}
-    {% endif %}
-    {% if  post.comments.all %}
+        <p>No comments</p>
         {% if user.is_authenticated %}
-            <a href="{% url 'add_comment' post.pk %}">Add another comment</a>
-            {% endif %}
+            <a href="{% url 'add_comment' post.pk %}" class="btn btn-success">Add one</a>
+        {% endif %}
     {% endif %}
+</div>
 {% endblock %}
