--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -14,16 +14,18 @@
         </a>
     </header>
     {% if user.is_authenticated %}
-                <p class="user-info">Logged in as {{ user.username }}</p>
-            {% endif %}
+        <div class="user-info-container">
+            <p class="user-info">Logged in as {{ user.username }}</p>
+        </div>
+    {% endif %}
     <nav>
         <a href="{% url 'home' %}">Home</a>
         {% if user.is_authenticated %}
             <a href="{% url 'add_post' %}">Add Post</a>
             <a href="{% url 'add_category' %}">Add Category</a>
             <form action="{% url 'logout' %}" method="post">
-            {% csrf_token %}
-            <input type="submit" value="Logout">
+                {% csrf_token %}
+                <input type="submit" value="Logout">
             </form>
         {% else %}
             <a href="{% url 'login' %}">Login</a>
