--- a/theblog/templates/update_post.html
+++ b/theblog/templates/update_post.html
@@ -5,17 +5,14 @@
 {% block content %}
     {% if user.is_authenticated %}
         {% if user.id == post.author.id %}
-<h2>Update Post</h2>
-<div class="form-group">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button>Post</button>
-    </form>
-    </div>
-            {% endif %}
+            <h2>Update Post</h2>
+            <div class="form-container">
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button class="btn btn-primary">Update</button>
+                </form>
+            </div>
+        {% endif %}
     {% endif %}
 {% endblock %}
-
-
-
